# kyc-proxy-contract

./: README.md
.github/workflows/: ci-casper-rust-contract.yml  nightly-scheduled-test.yml
contract/: Cargo.toml
contract/src/: kyc_contract.rs  proxy.rs  test_contract.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/wasm/: kyc-contract.wasm
